# me-graphics

./: .gitignore  CMakeLists.txt  README.md  me-graphics.sln  me-graphics.vcxproj
include/: Mesh.h  Model.h  Shader.h
include/core/: Camera.h  GameObject.h  LightManager.h  Mesh.h  Model.h  Scene.h  Shader.h
include/glad/: glad.h
include/prefabs/: Backpack.h
include/scenes/: TestScene.h
me-graphics/: main.cpp  me-graphics.vcxproj  me-graphics.vcxproj.filters
shaders/: color_fragment_shader.glsl  color_vertex_shader.glsl
src/: glad.c  main.cpp
src/core/: Camera.cpp  GameObject.cpp  LightManager.cpp  Mesh.cpp  Model.cpp  Scene.cpp  Shader.cpp
src/prefabs/: Backpack.cpp
src/scenes/: TestScene.cpp
